Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,6 +72,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Your code here"
    ]
   },
