Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,11 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pand"
+    "import pandas as pd"
    ]
   },
   {
@@ -81,7 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "data = pd.read_csv('ti')"
    ]
   },
   {
