--- a/index.ipynb
+++ b/index.ipynb
@@ -77,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "data = pd.read_csv('ti')"
+    "data = pd.read_csv('titanic.csv')"
    ]
   },
   {
