--- a/index.ipynb
+++ b/index.ipynb
@@ -100,6 +100,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Your code here"
    ]
   },
