--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "X = data.iloc[:, 2:]"
+    "X = data['Pclass', ]"
    ]
   },
   {
