--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "y, X = dmatrices['Pclass Sex Age SibSp Parch Ticket Fare Cabin']"
+    "y, X = dmatrices['Pclass + Sex + Age + SibSp + Parch + Ticket + Fare + CCabin']"
    ]
   },
   {
