--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "y, X = dmatrices['Pclass + Sex + Age + SibSp + Parch + Ticket + Fare + CCabin']"
+    "y, X = dmatrices['C(Pclass) + C(Sex) + Age + SibSp + Parch + Ticket + Fare + C(Cabin)']"
    ]
   },
   {
