Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "y, X = dmatrices['C(Pclass) + C(Sex) + Age + SibSp + Parch + Ticket + Fare + C(Cabin)']"
+    "y, X = dmatrices['C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked']"
    ]
   },
   {
