--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from patsy import dmatrices\n",
+    "import stats"
    ]
   },
   {
