--- a/index.ipynb
+++ b/index.ipynb
@@ -68,13 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from patsy import dmatrices\n",
-    "import stats"
+    "import statsmodels.api as sm"
    ]
   },
   {
@@ -255,7 +255,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "y, X = dmatrices['C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked']"
+    "y, X = dmatrices['C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked']\n",
+    "log_reg_model = "
    ]
   },
   {
