Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "y, X = dmatrices['C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked']\n",
+    "y, X = dmatrices['Survived ~ C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked']\n",
     "log_reg_model = "
    ]
   },
