--- a/index.ipynb
+++ b/index.ipynb
@@ -250,24 +250,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'function' object is not subscriptable",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-cbc49d5d3119>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-0c4b4c8c5248>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdmatrices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Survived ~ C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'function' object is not subscriptable"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-cbc49d5d3119>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    y, X = dmatrices['Survived ~ C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked', return_type = \"dataframe\"]\u001b[0m\n\u001b[0m                                                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "#Your code here\n",
-    "y, X = dmatrices['Survived ~ C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked']"
+    "y, X = dmatrices['Survived ~ C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked', \n",
+    "                 return_type = \"dataframe\"]"
    ]
   },
   {
