Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "y, X = dmatrices('Survived ~ C(Pclass) + C(Sex) + Age + Parch + Fare + C(Cabin) + Embarked', \n",
+    "y, X = dmatrices('Survived ~ C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked', data,\n",
     "                 return_type = \"dataframe\")"
    ]
   },
