Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,8 @@
     "#Your code here\n",
     "y, X = dmatrices('Survived ~ C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked', \n",
     "                 data,\n",
-    "                 return_type = \"dataframe\")"
+    "                 return_type = \"dataframe\")\n",
+    "sm.Logit()"
    ]
   },
   {
