Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,15 +250,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<statsmodels.discrete.discrete_model.Logit at 0x7f1d5361d3c8>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
     "y, X = dmatrices('Survived ~ C(Pclass) + C(Sex) + Age + SibSp + Parch + Fare + C(Cabin) + Embarked', \n",
     "                 data,\n",
     "                 return_type = \"dataframe\")\n",
-    "sm.Logit()"
+    "logit_mode lsm.Logit(y, X)\n"
    ]
   },
   {
