Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,89 +279,28 @@
     "                 data,\n",
     "                 return_type = \"dataframe\")\n",
     "logit_model = sm.Logit(y.iloc[:, 0], X)\n",
-    "logit_model.fit()\n",
-    "logit_mo"
+    "logit_model.fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1      1.0\n",
-       "3      1.0\n",
-       "6      0.0\n",
-       "10     1.0\n",
-       "11     1.0\n",
-       "21     1.0\n",
-       "23     1.0\n",
-       "27     0.0\n",
-       "52     1.0\n",
-       "54     0.0\n",
-       "62     0.0\n",
-       "66     1.0\n",
-       "75     0.0\n",
-       "88     1.0\n",
-       "92     0.0\n",
-       "96     0.0\n",
-       "97     1.0\n",
-       "102    0.0\n",
-       "110    0.0\n",
-       "118    0.0\n",
-       "123    1.0\n",
-       "124    0.0\n",
-       "136    1.0\n",
-       "137    0.0\n",
-       "139    0.0\n",
-       "148    0.0\n",
-       "151    1.0\n",
-       "170    0.0\n",
-       "174    0.0\n",
-       "177    0.0\n",
-       "      ... \n",
-       "737    1.0\n",
-       "741    0.0\n",
-       "742    1.0\n",
-       "745    0.0\n",
-       "748    0.0\n",
-       "751    1.0\n",
-       "759    1.0\n",
-       "763    1.0\n",
-       "765    1.0\n",
-       "772    0.0\n",
-       "779    1.0\n",
-       "781    1.0\n",
-       "782    0.0\n",
-       "789    0.0\n",
-       "796    1.0\n",
-       "802    1.0\n",
-       "806    0.0\n",
-       "809    1.0\n",
-       "820    1.0\n",
-       "823    1.0\n",
-       "835    1.0\n",
-       "853    1.0\n",
-       "857    1.0\n",
-       "862    1.0\n",
-       "867    0.0\n",
-       "871    1.0\n",
-       "872    0.0\n",
-       "879    1.0\n",
-       "887    1.0\n",
-       "889    1.0\n",
-       "Name: Survived, Length: 183, dtype: float64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Logit' object has no attribute 'summary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-3a1efa183e55>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlogit_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Logit' object has no attribute 'summary'"
+     ]
     }
    ],
    "source": [
-    "y.iloc[:, 0]"
+    "logit_model.summary()"
    ]
   },
   {
