--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -261,16 +261,6 @@
       "         Current function value: 0.444229\n",
       "         Iterations 6\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<statsmodels.discrete.discrete_model.BinaryResultsWrapper at 0x7f1d50231fd0>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -279,28 +269,109 @@
     "                 data,\n",
     "                 return_type = \"dataframe\")\n",
     "logit_model = sm.Logit(y.iloc[:, 0], X)\n",
-    "logit_model.fit()"
+    "results = logit_model.fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Logit' object has no attribute 'summary'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-3a1efa183e55>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlogit_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Logit' object has no attribute 'summary'"
-     ]
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Logit Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>     <td>Survived</td>     <th>  No. Observations:  </th>  <td>   712</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>               <td>Logit</td>      <th>  Df Residuals:      </th>  <td>   703</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>  <td>     8</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>          <td>Wed, 24 Jul 2019</td> <th>  Pseudo R-squ.:     </th>  <td>0.3417</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>              <td>13:54:57</td>     <th>  Log-Likelihood:    </th> <td> -316.29</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -480.45</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th> </th>                      <td> </td>        <th>  LLR p-value:       </th> <td>3.814e-66</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "          <td></td>            <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>        <td>    4.4240</td> <td>    0.534</td> <td>    8.277</td> <td> 0.000</td> <td>    3.376</td> <td>    5.472</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Pclass)[T.2]</th>   <td>   -1.2037</td> <td>    0.328</td> <td>   -3.675</td> <td> 0.000</td> <td>   -1.846</td> <td>   -0.562</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Pclass)[T.3]</th>   <td>   -2.4182</td> <td>    0.340</td> <td>   -7.119</td> <td> 0.000</td> <td>   -3.084</td> <td>   -1.752</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Sex)[T.male]</th>   <td>   -2.6163</td> <td>    0.218</td> <td>  -11.992</td> <td> 0.000</td> <td>   -3.044</td> <td>   -2.189</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Embarked)[T.Q]</th> <td>   -0.8154</td> <td>    0.598</td> <td>   -1.363</td> <td> 0.173</td> <td>   -1.988</td> <td>    0.357</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Embarked)[T.S]</th> <td>   -0.4047</td> <td>    0.274</td> <td>   -1.475</td> <td> 0.140</td> <td>   -0.943</td> <td>    0.133</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Age</th>              <td>   -0.0433</td> <td>    0.008</td> <td>   -5.202</td> <td> 0.000</td> <td>   -0.060</td> <td>   -0.027</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>SibSp</th>            <td>   -0.3794</td> <td>    0.125</td> <td>   -3.036</td> <td> 0.002</td> <td>   -0.624</td> <td>   -0.134</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Fare</th>             <td>    0.0012</td> <td>    0.002</td> <td>    0.468</td> <td> 0.640</td> <td>   -0.004</td> <td>    0.006</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                           Logit Regression Results                           \n",
+       "==============================================================================\n",
+       "Dep. Variable:               Survived   No. Observations:                  712\n",
+       "Model:                          Logit   Df Residuals:                      703\n",
+       "Method:                           MLE   Df Model:                            8\n",
+       "Date:                Wed, 24 Jul 2019   Pseudo R-squ.:                  0.3417\n",
+       "Time:                        13:54:57   Log-Likelihood:                -316.29\n",
+       "converged:                       True   LL-Null:                       -480.45\n",
+       "                                        LLR p-value:                 3.814e-66\n",
+       "====================================================================================\n",
+       "                       coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------------\n",
+       "Intercept            4.4240      0.534      8.277      0.000       3.376       5.472\n",
+       "C(Pclass)[T.2]      -1.2037      0.328     -3.675      0.000      -1.846      -0.562\n",
+       "C(Pclass)[T.3]      -2.4182      0.340     -7.119      0.000      -3.084      -1.752\n",
+       "C(Sex)[T.male]      -2.6163      0.218    -11.992      0.000      -3.044      -2.189\n",
+       "C(Embarked)[T.Q]    -0.8154      0.598     -1.363      0.173      -1.988       0.357\n",
+       "C(Embarked)[T.S]    -0.4047      0.274     -1.475      0.140      -0.943       0.133\n",
+       "Age                 -0.0433      0.008     -5.202      0.000      -0.060      -0.027\n",
+       "SibSp               -0.3794      0.125     -3.036      0.002      -0.624      -0.134\n",
+       "Fare                 0.0012      0.002      0.468      0.640      -0.004       0.006\n",
+       "====================================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "logit_model.summary()"
+    "results.summary()"
    ]
   },
   {
