Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n"
+    "#your code here\n",
+    "y, X = dmatrices('Survived ~')"
    ]
   },
   {
