--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,7 @@
    "outputs": [],
    "source": [
     "#your code here\n",
-    "y, X = dmatrices('Survived ~')"
+    "y, X = dmatrices('Survived ~ C(PClass) + C(Sex)')"
    ]
   },
   {
