Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,8 @@
    "outputs": [],
    "source": [
     "#your code here\n",
-    "y, X = dmatrices('Survived ~ C(PClass) + C(Sex)')"
+    "y, X = dmatrices('Survived ~ C(PClass) + C(Sex) + Age + SibSp', \n",
+    "                 d)"
    ]
   },
   {
