Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,8 @@
    "source": [
     "#your code here\n",
     "y, X = dmatrices('Survived ~ C(PClass) + C(Sex) + Age + SibSp', \n",
-    "                 d)"
+    "                 data, \n",
+    "                 return_type='d')"
    ]
   },
   {
