Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,9 +437,10 @@
    "outputs": [],
    "source": [
     "#your code here\n",
-    "y, X = dmatrices('Survived ~ C(PClass) + C(Sex) + Age + SibSp', \n",
+    "y2, X2 = dmatrices('Survived ~ C(PClass) + C(Sex) + Age + SibSp', \n",
     "                 data, \n",
-    "                 return_type='d')"
+    "                 return_type='dataframe')\n",
+    "logit_model_2 = sm.Logit()"
    ]
   },
   {
