Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -440,7 +440,8 @@
     "y2, X2 = dmatrices('Survived ~ C(PClass) + C(Sex) + Age + SibSp', \n",
     "                 data, \n",
     "                 return_type='dataframe')\n",
-    "logit_model_2 = sm.Logit()"
+    "logit_model_2 = sm.Logit(y2, X2)\n",
+    "results2 = logit_model_2.fi"
    ]
   },
   {
